buncha stuff, important surely

--- a/assets/style/buttonDesign.css
+++ b/assets/style/buttonDesign.css
@@ -27,3 +27,9 @@
 #endEarlyButton {
     visibility: hidden;
 }
+#addCalenderEvent {
+    width: 20%;
+    height: 20%;
+    padding: 10px;
+    outline: none;
+}
