--- a/assets/style/mainStyle.css
+++ b/assets/style/mainStyle.css
@@ -1,3 +1,10 @@
+html {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 @font-face {
     font-family: "sourceSansPro";
     src: url('../fonts/SourceSansPro-Regular.ttf')
@@ -18,11 +25,9 @@
 .indexHeaderButtons {
     text-align: end !important;
 }
-
 #vertical-container {
     height: 400px;
     width: 100%;
-    max-width: 300px !important;
 }
 
 .mainPageHeader {
@@ -40,28 +45,28 @@
     margin-bottom: 0;
 }
 .mainPageEventContent {
-    max-width: 80%;
+    max-width: 60%;
     margin-top: 10px;
 }
 .mainPageEvent {
-    margin-top: 10px;
+    padding: 10px 10px 20px 10px;
 }
 
 #mainPageComingEvents {
     border-top: solid;
 }
 .main{
-    background: url('../images/rd6bg_gray_land.jpg') no-repeat;
-    background-size: 100%;
+    background: url('../images/rd6bg_gray_land.jpg') no-repeat center center fixed;
+    min-height:100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     position: relative;
     border: 4px solid;
     border-radius: 4px;
     border-color: #575757;
-
 }
 
 body {
-    background-color: grey;
     font-family: sourceSansPro;
 }
 
@@ -80,7 +85,6 @@ md-dialog.md-default-theme, md-dialog {
 }
 
 .md-block {
-    max-width: 200px;
     margin: 10px;
     padding: 10px;
 }
@@ -88,7 +92,6 @@ md-dialog.md-default-theme, md-dialog {
 .mainPageNewEvent {
     background-color: #43A047;
     border-radius: 5px;
-    position: relative;
 
 }
 
@@ -98,7 +101,6 @@ md-dialog.md-default-theme, md-dialog {
 }
 md-slider-container > *:last-child:not(md-slider) {
 
-    max-width: 100px !important;
     transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
     -webkit-transition-property: color, max-width;
     transition-property: color, max-width;
@@ -166,4 +168,7 @@ h5 {
 .indexFooter {
     border-top: 4px solid;
     border-color: #575757;
+}
+#newEvent{
+    position: relative;
 }
